fix: исправить автотесты

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
                     <div class="profile__name-edit">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
                         <button class="profile__edit-btn">
-                            <svg class="profile__edit-icon" xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewbox="0 0 10 10" fill="none">
-                                <path d="M10 1.32827L2.60377 8.7666L1.28302 7.41936L8.66038 0L10 1.32827ZM0 10L1.96226 9.41177L0.584906 8.08349L0 10Z"/>
-                            </svg>
+                            <img class="profile__edit-icon" src="./images/icons/pen.svg" alt="редактировать">
                         </button>
                     </div>
                     <h2 class="profile__description">Исследователь океана</h2>
