--- a/index.html
+++ b/index.html
@@ -18,89 +18,91 @@
                 <div class="profile__info">
                     <div class="profile__name-edit">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
-                        <button class="profile__edit-btn">
+                        <button type="button" class="profile__edit-btn">
                             <img class="profile__edit-icon" src="./images/icons/pen.svg" alt="редактировать">
                         </button>
                     </div>
                     <h2 class="profile__description">Исследователь океана</h2>
                 </div>
             </div>
-            <button class="profile__add-btn">
+            <button type="button" class="profile__add-btn">
                 <img src="./images/icons/plus.svg" alt="добавить" class="profile__plus">
             </button>
         </section>
         <section class="places">
-            <div class="place">
+            <article class="place">
                 <img src="./images/places/karachaevsk.jpg" alt="Карачаевск" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Карачаевск</h2>
-                    <button class="place__like">
+                    <button type="button" class="place__like">
                         <img src="./images/icons/like.svg" alt="лайк">
                     </button>
                 </div>
-            </div>
-            <div class="place">
+            </article>
+            <article class="place">
                 <img src="./images/places/elbrus.jpg" alt="Эльбрус" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Гора Эльбрус</h2>
-                    <button class="place__like">
+                    <button type="button" class="place__like">
                         <img src="./images/icons/like.svg" alt="лайк">
                     </button>
                 </div>
-            </div>
-            <div class="place">
+            </article>
+            <article class="place">
                 <img src="./images/places/dombai.jpg" alt="Домбай" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Домбай</h2>
-                    <button class="place__like">
+                    <button type="button" class="place__like">
                         <img src="./images/icons/like.svg" alt="лайк">
                     </button>
                 </div>
-            </div>
-            <div class="place">
+            </article>
+            <article class="place">
                 <img src="./images/places/elbrus.jpg" alt="Эльбрус" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Гора Эльбрус</h2>
-                    <button class="place__like">
+                    <button type="button" class="place__like">
                         <img src="./images/icons/like.svg" alt="лайк">
                     </button>
                 </div>
-            </div>
-            <div class="place">
+            </article>
+            <article class="place">
                 <img src="./images/places/dombai.jpg" alt="Домбай" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Домбай</h2>
-                    <button class="place__like">
+                    <button type="button" class="place__like">
                         <img src="./images/icons/like.svg" alt="лайк">
                     </button>
                 </div>
-            </div>
-            <div class="place">
+            </article>
+            <article class="place">
                 <img src="./images/places/karachaevsk.jpg" alt="Карачаевск" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Карачаево-Черкесск</h2>
-                    <button class="place__like">
+                    <button type="button" class="place__like">
                         <img src="./images/icons/like.svg" alt="лайк">
                     </button>
                 </div>
-            </div>
+            </article>
         </section>
     </main>
     <footer class="footer">
         <p class="footer__text">© 2020 Mesto Russia</p>
     </footer>
     <div class="popup">
-        <form action="#" class="popup__container">
-            <button class="popup__close-btn">
+        <div class="popup__container">
+            <button type="button" class="popup__close-btn">
                 <img src="./images/icons/plus.svg" alt="закрыть" class="popup__close-icon">
             </button>
-            <h2 class="popup__title">Редактировать профиль</h2>
-            <input type="text" class="popup__name popup__input" placeholder="Имя">
-            <input type="text" class="popup__description popup__input" placeholder="О себе">
-            <button type="submit" class="popup__submit-btn">Сохранить</button>
-        </form>
+            <form action="#" class="popup__form" name="profile_info">
+                <h2 class="popup__title">Редактировать профиль</h2>
+                <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя">
+                <input type="text" name="about" class="popup__input popup__input_type_about" placeholder="О себе">
+                <button type="submit" class="popup__submit-btn">Сохранить</button>
+            </form>
+        </div>
     </div>
 </div>
-<script src="js/index.js"></script>
+<script src="scripts/index.js"></script>
 </body>
 </html>
