--- a/index.html
+++ b/index.html
@@ -18,70 +18,54 @@
                 <div class="profile__info">
                     <div class="profile__name-edit">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
-                        <button type="button" class="profile__edit-btn">
-                            <img class="profile__edit-icon" src="./images/icons/pen.svg" alt="редактировать">
-                        </button>
+                        <button type="button" class="profile__edit-btn"></button>
                     </div>
                     <h2 class="profile__description">Исследователь океана</h2>
                 </div>
             </div>
-            <button type="button" class="profile__add-btn">
-                <img src="./images/icons/plus.svg" alt="добавить" class="profile__plus">
-            </button>
+            <button type="button" class="profile__add-btn"></button>
         </section>
         <section class="places">
             <article class="place">
                 <img src="./images/places/karachaevsk.jpg" alt="Карачаевск" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Карачаевск</h2>
-                    <button type="button" class="place__like">
-                        <img src="./images/icons/like.svg" alt="лайк">
-                    </button>
+                    <button type="button" class="place__like"></button>
                 </div>
             </article>
             <article class="place">
                 <img src="./images/places/elbrus.jpg" alt="Эльбрус" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Гора Эльбрус</h2>
-                    <button type="button" class="place__like">
-                        <img src="./images/icons/like.svg" alt="лайк">
-                    </button>
+                    <button type="button" class="place__like"></button>
                 </div>
             </article>
             <article class="place">
                 <img src="./images/places/dombai.jpg" alt="Домбай" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Домбай</h2>
-                    <button type="button" class="place__like">
-                        <img src="./images/icons/like.svg" alt="лайк">
-                    </button>
+                    <button type="button" class="place__like"></button>
                 </div>
             </article>
             <article class="place">
                 <img src="./images/places/elbrus.jpg" alt="Эльбрус" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Гора Эльбрус</h2>
-                    <button type="button" class="place__like">
-                        <img src="./images/icons/like.svg" alt="лайк">
-                    </button>
+                    <button type="button" class="place__like"></button>
                 </div>
             </article>
             <article class="place">
                 <img src="./images/places/dombai.jpg" alt="Домбай" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Домбай</h2>
-                    <button type="button" class="place__like">
-                        <img src="./images/icons/like.svg" alt="лайк">
-                    </button>
+                    <button type="button" class="place__like"></button>
                 </div>
             </article>
             <article class="place">
                 <img src="./images/places/karachaevsk.jpg" alt="Карачаевск" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Карачаево-Черкесск</h2>
-                    <button type="button" class="place__like">
-                        <img src="./images/icons/like.svg" alt="лайк">
-                    </button>
+                    <button type="button" class="place__like"></button>
                 </div>
             </article>
         </section>
@@ -91,15 +75,15 @@
     </footer>
     <div class="popup">
         <div class="popup__container">
-            <button type="button" class="popup__close-btn">
-                <img src="./images/icons/plus.svg" alt="закрыть" class="popup__close-icon">
-            </button>
-            <form action="#" class="popup__form" name="profile_info">
+            <button type="button" class="popup__close-btn"></button>
+            <div class="popup__window">
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя">
-                <input type="text" name="about" class="popup__input popup__input_type_about" placeholder="О себе">
-                <button type="submit" class="popup__submit-btn">Сохранить</button>
-            </form>
+                <form action="#" class="popup__form" name="profile_info">
+                    <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя">
+                    <input type="text" name="about" class="popup__input popup__input_type_about" placeholder="О себе">
+                    <button type="submit" class="popup__submit-btn">Сохранить</button>
+                </form>
+            </div>
         </div>
     </div>
 </div>
