--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </section>
         <section class="places">
             <article class="place">
+                <button class="place__delete"></button>
                 <img src="./images/places/karachaevsk.jpg" alt="Карачаевск" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Карачаевск</h2>
@@ -34,6 +35,7 @@
                 </div>
             </article>
             <article class="place">
+                <button class="place__delete"></button>
                 <img src="./images/places/elbrus.jpg" alt="Эльбрус" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Гора Эльбрус</h2>
@@ -41,6 +43,7 @@
                 </div>
             </article>
             <article class="place">
+                <button class="place__delete"></button>
                 <img src="./images/places/dombai.jpg" alt="Домбай" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Домбай</h2>
@@ -48,6 +51,7 @@
                 </div>
             </article>
             <article class="place">
+                <button class="place__delete"></button>
                 <img src="./images/places/elbrus.jpg" alt="Эльбрус" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Гора Эльбрус</h2>
@@ -55,6 +59,7 @@
                 </div>
             </article>
             <article class="place">
+                <button class="place__delete"></button>
                 <img src="./images/places/dombai.jpg" alt="Домбай" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Домбай</h2>
@@ -62,18 +67,29 @@
                 </div>
             </article>
             <article class="place">
+                <button class="place__delete"></button>
                 <img src="./images/places/karachaevsk.jpg" alt="Карачаевск" class="place__image">
                 <div class="place__info">
                     <h2 class="place__name">Карачаево-Черкесск</h2>
                     <button type="button" class="place__like"></button>
                 </div>
             </article>
+            <template id="place">
+                <article class="place">
+                    <button class="place__delete"></button>
+                    <img src="" alt="место" class="place__image">
+                    <div class="place__info">
+                        <h2 class="place__name"></h2>
+                        <button type="button" class="place__like"></button>
+                    </div>
+                </article>
+            </template>
         </section>
     </main>
     <footer class="footer">
         <p class="footer__text">© 2020 Mesto Russia</p>
     </footer>
-    <div class="popup">
+    <div class="popup popup_type_edit">
         <div class="popup__container">
             <button type="button" class="popup__close-btn"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
@@ -83,6 +99,24 @@
                 <button type="submit" class="popup__submit-btn">Сохранить</button>
             </form>
         </div>
+    </div>
+    <div class="popup popup_type_add">
+        <div class="popup__container">
+            <button type="button" class="popup__close-btn"></button>
+            <h2 class="popup__title">Новое место</h2>
+            <form action="#" class="popup__form" name="add_place">
+                <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Название">
+                <input type="text" name="link" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку">
+                <button type="submit" class="popup__submit-btn">Создать</button>
+            </form>
+        </div>
+    </div>
+    <div class="popup popup_type_picture">
+        <figure class="picture">
+            <button type="button" class="popup__close-btn"></button>
+            <img src="" alt="картинка места" class="picture__image">
+            <figcaption class="picture__title">Новое место</figcaption>
+        </figure>
     </div>
 </div>
 <script src="scripts/index.js"></script>
