fix/исправить Ðавтотесты

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <template id="place">
                 <article class="place">
                     <button class="place__delete"></button>
-                    <img src="" alt="место" class="place__image">
+                    <img alt="место" class="place__image">
                     <div class="place__info">
                         <h2 class="place__name"></h2>
                         <button type="button" class="place__like"></button>
@@ -114,7 +114,7 @@
     <div class="popup popup_type_picture">
         <figure class="picture">
             <button type="button" class="popup__close-btn"></button>
-            <img src="" alt="картинка места" class="picture__image">
+            <img alt="картинка места" class="picture__image">
             <figcaption class="picture__title">Новое место</figcaption>
         </figure>
     </div>
