--- a/index.html
+++ b/index.html
@@ -26,54 +26,6 @@
             <button type="button" class="profile__add-btn"></button>
         </section>
         <section class="places">
-            <article class="place">
-                <button class="place__delete"></button>
-                <img src="./images/places/karachaevsk.jpg" alt="Карачаевск" class="place__image">
-                <div class="place__info">
-                    <h2 class="place__name">Карачаевск</h2>
-                    <button type="button" class="place__like"></button>
-                </div>
-            </article>
-            <article class="place">
-                <button class="place__delete"></button>
-                <img src="./images/places/elbrus.jpg" alt="Эльбрус" class="place__image">
-                <div class="place__info">
-                    <h2 class="place__name">Гора Эльбрус</h2>
-                    <button type="button" class="place__like"></button>
-                </div>
-            </article>
-            <article class="place">
-                <button class="place__delete"></button>
-                <img src="./images/places/dombai.jpg" alt="Домбай" class="place__image">
-                <div class="place__info">
-                    <h2 class="place__name">Домбай</h2>
-                    <button type="button" class="place__like"></button>
-                </div>
-            </article>
-            <article class="place">
-                <button class="place__delete"></button>
-                <img src="./images/places/elbrus.jpg" alt="Эльбрус" class="place__image">
-                <div class="place__info">
-                    <h2 class="place__name">Гора Эльбрус</h2>
-                    <button type="button" class="place__like"></button>
-                </div>
-            </article>
-            <article class="place">
-                <button class="place__delete"></button>
-                <img src="./images/places/dombai.jpg" alt="Домбай" class="place__image">
-                <div class="place__info">
-                    <h2 class="place__name">Домбай</h2>
-                    <button type="button" class="place__like"></button>
-                </div>
-            </article>
-            <article class="place">
-                <button class="place__delete"></button>
-                <img src="./images/places/karachaevsk.jpg" alt="Карачаевск" class="place__image">
-                <div class="place__info">
-                    <h2 class="place__name">Карачаево-Черкесск</h2>
-                    <button type="button" class="place__like"></button>
-                </div>
-            </article>
             <template id="place">
                 <article class="place">
                     <button class="place__delete"></button>
@@ -94,8 +46,8 @@
             <button type="button" class="popup__close-btn"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
             <form action="#" class="popup__form" name="profile_info">
-                <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя">
-                <input type="text" name="about" class="popup__input popup__input_type_about" placeholder="О себе">
+                <input type="text" name="name" required class="popup__input popup__input_type_name" placeholder="Имя">
+                <input type="text" name="about" required class="popup__input popup__input_type_about" placeholder="О себе">
                 <button type="submit" class="popup__submit-btn">Сохранить</button>
             </form>
         </div>
@@ -105,8 +57,8 @@
             <button type="button" class="popup__close-btn"></button>
             <h2 class="popup__title">Новое место</h2>
             <form action="#" class="popup__form" name="add_place">
-                <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Название">
-                <input type="text" name="link" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку">
+                <input type="text" name="name" required class="popup__input popup__input_type_name" placeholder="Название">
+                <input type="url" name="link" required class="popup__input popup__input_type_link" placeholder="Ссылка на картинку">
                 <button type="submit" class="popup__submit-btn">Создать</button>
             </form>
         </div>
@@ -119,6 +71,7 @@
         </figure>
     </div>
 </div>
+<script src="scripts/cards.js"></script>
 <script src="scripts/index.js"></script>
 </body>
 </html>
