--- a/index.html
+++ b/index.html
@@ -45,9 +45,15 @@
         <div class="popup__container">
             <button type="button" class="popup__close-btn"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
-            <form action="#" class="popup__form" name="profile_info">
-                <input type="text" name="name" required class="popup__input popup__input_type_name" placeholder="Имя">
-                <input type="text" name="about" required class="popup__input popup__input_type_about" placeholder="О себе">
+            <form class="popup__form" name="profile_info">
+                <label class="popup__field">
+                    <input type="text" name="profile-name" required class="popup__input popup__input_type_name" placeholder="Имя" id="name-input" minlength="2" maxlength="40">
+                    <span class="popup__input-error name-input-error"></span>
+                </label>
+                <label class="popup__field">
+                    <input type="text" name="about" required class="popup__input popup__input_type_about" placeholder="О себе" id="about-input" minlength="2" maxlength="200">
+                    <span class="popup__input-error about-input-error"></span>
+                </label>
                 <button type="submit" class="popup__submit-btn">Сохранить</button>
             </form>
         </div>
@@ -56,9 +62,17 @@
         <div class="popup__container">
             <button type="button" class="popup__close-btn"></button>
             <h2 class="popup__title">Новое место</h2>
-            <form action="#" class="popup__form" name="add_place">
-                <input type="text" name="name" required class="popup__input popup__input_type_name" placeholder="Название">
-                <input type="url" name="link" required class="popup__input popup__input_type_link" placeholder="Ссылка на картинку">
+            <form class="popup__form" name="add_place">
+                <label class="popup__field">
+                    <input type="text" name="name-place" required class="popup__input popup__input_type_name"
+                           placeholder="Название" id="name-place-input" minlength="2" maxlength="30">
+                    <span class="popup__input-error name-place-input-error"></span>
+                </label>
+                <label class="popup__field">
+                    <input type="url" name="link" required class="popup__input popup__input_type_link"
+                           placeholder="Ссылка на картинку" id="link-input">
+                    <span class="popup__input-error link-input-error"></span>
+                </label>
                 <button type="submit" class="popup__submit-btn">Создать</button>
             </form>
         </div>
@@ -72,6 +86,7 @@
     </div>
 </div>
 <script src="scripts/cards.js"></script>
+<script src="scripts/validate.js"></script>
 <script src="scripts/index.js"></script>
 </body>
 </html>
