fix: исправить замечания ревью

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="popup popup_type_picture">
         <figure class="picture">
             <button type="button" class="popup__close-btn"></button>
-            <img alt="картинка места" class="picture__image">
+            <img class="picture__image">
             <figcaption class="picture__title">Новое место</figcaption>
         </figure>
     </div>
