--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Место</title>
-    <link rel="stylesheet" href="./pages/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body class="body">
 <div class="page">
     <header class="header">
-        <img src="./images/logo.svg" alt="лого" class="header__logo">
+        <img src="<%=require('./images/logo.svg')%>" alt="лого" class="header__logo">
     </header>
     <main class="content">
         <section class="profile">
             <div class="profile__data">
-                <img src="./images/avatar.png" alt="аватар" class="profile__avatar">
+                <img src="<%=require('./images/avatar.png')%>" alt="аватар" class="profile__avatar">
                 <div class="profile__info">
                     <div class="profile__name-edit">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -85,9 +84,5 @@
         </figure>
     </div>
 </div>
-<script type="module" src="scripts/cards.js"></script>
-<script type="module" src="scripts/Card.js"></script>
-<script type="module" src="scripts/FormValidator.js"></script>
-<script type="module" src="scripts/index.js"></script>
 </body>
 </html>
