--- a/src/index.html
+++ b/src/index.html
@@ -46,11 +46,11 @@
             <h2 class="popup__title">Редактировать профиль</h2>
             <form novalidate class="popup__form" name="profile_info">
                 <label class="popup__field">
-                    <input type="text" name="profile-name" required class="popup__input popup__input_type_name" placeholder="Имя" id="name-input" minlength="2" maxlength="40">
+                    <input type="text" name="name" required class="popup__input popup__input_type_name" placeholder="Имя" id="name-input" minlength="2" maxlength="40">
                     <span class="popup__input-error name-input-error"></span>
                 </label>
                 <label class="popup__field">
-                    <input type="text" name="about" required class="popup__input popup__input_type_about" placeholder="О себе" id="about-input" minlength="2" maxlength="200">
+                    <input type="text" name="description" required class="popup__input popup__input_type_about" placeholder="О себе" id="about-input" minlength="2" maxlength="200">
                     <span class="popup__input-error about-input-error"></span>
                 </label>
                 <button type="submit" class="popup__submit-btn">Сохранить</button>
@@ -63,7 +63,7 @@
             <h2 class="popup__title">Новое место</h2>
             <form novalidate class="popup__form" name="add_place">
                 <label class="popup__field">
-                    <input type="text" name="name-place" required class="popup__input popup__input_type_name"
+                    <input type="text" name="name" required class="popup__input popup__input_type_name"
                            placeholder="Название" id="name-place-input" minlength="2" maxlength="30">
                     <span class="popup__input-error name-place-input-error"></span>
                 </label>
