--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,10 @@
     <main class="content">
         <section class="profile">
             <div class="profile__data">
-                <img src="<%=require('./images/avatar.png')%>" alt="аватар" class="profile__avatar">
+                <div class="profile__avatar-container">
+                    <img src="<%=require('./images/avatar.png')%>" alt="аватар" class="profile__avatar">
+                    <div class="profile__avatar-hover"></div>
+                </div>
                 <div class="profile__info">
                     <div class="profile__name-edit">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -27,11 +30,14 @@
         <section class="places">
             <template id="place">
                 <article class="place">
-                    <button class="place__delete"></button>
+<!--                    <button class="place__delete"></button>-->
                     <img alt="место" class="place__image">
                     <div class="place__info">
                         <h2 class="place__name"></h2>
-                        <button type="button" class="place__like"></button>
+                        <div class="place__like-block">
+                            <button type="button" class="place__like"></button>
+                            <p class="place__like-count"></p>
+                        </div>
                     </div>
                 </article>
             </template>
@@ -82,6 +88,29 @@
             <img class="picture__image">
             <figcaption class="picture__title">Новое место</figcaption>
         </figure>
+    </div>
+    <div class="popup popup_type_confirm">
+        <div class="popup__container">
+            <button type="button" class="popup__close-btn"></button>
+            <h2 class="popup__title">Вы уверены?</h2>
+            <form novalidate class="popup__form" name="confirm">
+                <button type="submit" class="popup__submit-btn">Да</button>
+            </form>
+        </div>
+    </div>
+    <div class="popup popup_type_avatar">
+        <div class="popup__container">
+            <button type="button" class="popup__close-btn"></button>
+            <h2 class="popup__title">Обновить аватар</h2>
+            <form novalidate class="popup__form" name="avatar">
+                <label class="popup__field">
+                    <input type="url" name="link" required class="popup__input popup__input_type_link"
+                           placeholder="Ссылка на картинку" id="avatar-link">
+                    <span class="popup__input-error avatar-link-error"></span>
+                </label>
+                <button type="submit" class="popup__submit-btn">Сохранить</button>
+            </form>
+        </div>
     </div>
 </div>
 </body>
